[gd_scene load_steps=35 format=3 uid="uid://cfyn5xxip2okh"]

[ext_resource type="Script" path="res://Entities/Enemies/Fat Penguin Cop/fat_penguin_cop.gd" id="1_rkrr8"]
[ext_resource type="Texture2D" uid="uid://cbt25cu4v7qkf" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/penguin-police.png" id="2_2gou8"]
[ext_resource type="PackedScene" uid="uid://dv75t1glvbda2" path="res://Misc/Bullet.tscn" id="2_81ude"]
[ext_resource type="Shader" path="res://Entities/Enemies/hit_flash.gdshader" id="2_ob8wy"]
[ext_resource type="Texture2D" uid="uid://d25u4luifj0pd" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/death/police_death1.png" id="3_a8v5y"]
[ext_resource type="Texture2D" uid="uid://dtkj5cimi878f" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/police_guard_slap_frames.png" id="3_c4i3h"]
[ext_resource type="Theme" uid="uid://dap64i2o0ns0x" path="res://Misc/Theme.tres" id="3_g3ud3"]
[ext_resource type="Texture2D" uid="uid://d1fskg8ypleek" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/death/police_death2.png" id="4_pibk3"]
[ext_resource type="Texture2D" uid="uid://dg0rnllf2bv80" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/death/police_death3.png" id="5_bhrn7"]
[ext_resource type="Texture2D" uid="uid://biwmbpmxmqiyd" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/death/police_death4.png" id="6_btskl"]
[ext_resource type="Texture2D" uid="uid://dsrputjkimjfu" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/death/police_death5.png" id="7_lcgnq"]
[ext_resource type="Texture2D" uid="uid://cfa07nvk34x4o" path="res://Entities/Enemies/Fat Penguin Cop/Sprites/penguin-police-run.png" id="9_th507"]
[ext_resource type="Texture2D" uid="uid://b6sb5ingbsp6k" path="res://old-Guns/shotgun.png" id="10_uu1ws"]
[ext_resource type="Script" path="res://Entities/Enemies/Shotgun.gd" id="11_anauf"]
[ext_resource type="AudioStream" uid="uid://d3wk2f2csw6x4" path="res://Audio/gunshot.mp3" id="15_3gbfu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7x8rt"]
height = 34.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h4cui"]
resource_local_to_scene = true
shader = ExtResource("2_ob8wy")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_r0e5a"]
atlas = ExtResource("2_2gou8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igyoi"]
atlas = ExtResource("2_2gou8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6i58"]
atlas = ExtResource("2_2gou8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myx3i"]
atlas = ExtResource("9_th507")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ujle"]
atlas = ExtResource("9_th507")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfw84"]
atlas = ExtResource("9_th507")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_keo6e"]
atlas = ExtResource("9_th507")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rltti"]
atlas = ExtResource("9_th507")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hio3x"]
atlas = ExtResource("9_th507")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8dpb"]
atlas = ExtResource("3_c4i3h")
region = Rect2(0, 0, 45, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhehn"]
atlas = ExtResource("3_c4i3h")
region = Rect2(46, 0, 45, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev1n2"]
atlas = ExtResource("3_c4i3h")
region = Rect2(92, 0, 45, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rph5l"]
atlas = ExtResource("3_c4i3h")
region = Rect2(138, 0, 45, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swdpx"]
atlas = ExtResource("3_c4i3h")
region = Rect2(184, 0, 45, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tm0al"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a8v5y")
}, {
"duration": 0.6,
"texture": ExtResource("4_pibk3")
}, {
"duration": 0.6,
"texture": ExtResource("5_bhrn7")
}, {
"duration": 0.6,
"texture": ExtResource("6_btskl")
}, {
"duration": 0.6,
"texture": ExtResource("7_lcgnq")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0e5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igyoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6i58")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myx3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ujle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keo6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rltti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hio3x")
}],
"loop": true,
"name": &"running",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8dpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhehn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev1n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rph5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swdpx")
}],
"loop": false,
"name": &"slap",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_matj5"]
radius = 124.036

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ybixe"]
height = 34.0

[node name="penguin_cop_gun" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_rkrr8")
bullet_scene = ExtResource("2_81ude")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_7x8rt")
one_way_collision_margin = 0.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_h4cui")
sprite_frames = SubResource("SpriteFrames_tm0al")
animation = &"death"

[node name="Detection_Radius" type="Area2D" parent="."]

[node name="follow_radius" type="CollisionShape2D" parent="Detection_Radius"]
shape = SubResource("CircleShape2D_matj5")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -11.0
offset_top = -19.0
offset_right = 94.0
offset_bottom = 8.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("3_g3ud3")
max_value = 250.0
show_percentage = false

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="FlashHitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Cop_Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cop_Hitbox"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ybixe")

[node name="Shotgun" type="Sprite2D" parent="."]
position = Vector2(0, 7)
texture = ExtResource("10_uu1ws")
offset = Vector2(8, 2.08165e-12)
script = ExtResource("11_anauf")

[node name="Muzzle" type="Node2D" parent="Shotgun"]
position = Vector2(31, -2)

[node name="Reload_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="lightGunShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_3gbfu")
pitch_scale = 3.5
bus = &"Sound Effects"

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Detection_Radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="FlashHitTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="Reload_Timer" to="." method="_on_reload_timer_timeout"]
